fix: removes unevessary css from alignment classes

--- a/assets/sass/content/_wordpress.scss
+++ b/assets/sass/content/_wordpress.scss
@@ -1,11 +1,11 @@
 .alignleft {
-	display: inline;
+	// display: inline;
 	float: left;
 	margin-right: 1.5em;
 }
 
 .alignright {
-	display: inline;
+	// display: inline;
 	float: right;
 	margin-left: 1.5em;
 }
