--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -47,19 +47,6 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @import "base/accessibility";
 
 /*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
-#page {}
-
-.hfeed {}
-
-.site {}
-
-.skip-link {}
-
-.screen-reader-text {}
-
-/*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 @import "content/header";
